--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,59 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <com.example.kgadde.subclassingview.MyTextView
+        app:initialValue="@integer/zero"
+        android:textSize="30dp"
+        android:id="@+id/myView001"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="#f00"
+        android:textColor="#000"
+        android:gravity="center"/>
+
+    <com.example.kgadde.subclassingview.MyTextView
+        app:initialValue="@integer/zero"
+        android:textSize="30dp"
+        android:id="@+id/myView002"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="#f00"
+        android:textColor="#000"
+        android:layout_alignParentRight="true"
+        android:gravity="center"/>
+
+    <com.example.kgadde.subclassingview.MyTextView
+        app:initialValue="@integer/zero"
+        android:textSize="30dp"
+        android:id="@+id/myView003"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="#f00"
+        android:textColor="#000"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"/>
+
+    <com.example.kgadde.subclassingview.MyTextView
+        app:initialValue="@integer/zero"
+        android:textSize="30dp"
+        android:id="@+id/myView004"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="#f00"
+        android:textColor="#000"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"/>
 
 </RelativeLayout>
